<resources>
    <string name="app_name">ApplicationMVP</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_qr_cdoe">QR-сканер</string>
    <string name="qr_code">QR-сканер</string>
    <string name="title_news">Новости</string>
    <string name="title_profile">Профиль</string>
    <string name="authorization_button">Войти</string>
    <string name="registration_button">Регистрация</string>
    <string name="reset_mail">Сбросить</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="go_test">Пройти тест</string>
    <string name="data_reset">Сброс данных</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="countQuestion">1/10</string>
    <string name="qr_code_scan">qr-code scan</string>
    <string name="comment">Комментраий</string>
    <string name="question">Вопрос</string>
    <string name="nextQuestion">Следующий вопрос</string>
    <string name="saveResultTest">Сохранить результаты</string>
    <!--error-->
    <string name="passwordMin">Введите пароль больше 4 символов</string>
    <string name="mailMin">Email должен быть длиннее 4 символов</string>
    <string name="passwordIdentity">Пароли не одинаковы</string>
    <string name="error">Ошибка</string>
    <string name="notEmpty">Не должно быть пустых полей</string>
</resources>