<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.vivt.applicationmvp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="ru.vivt.applicationmvp.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.vivt.applicationmvp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="ru.vivt.applicationmvp.ui.authorization.AuthorizationFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_autrization" />

    <fragment
        android:id="@+id/navigation_qr_code_scanner"
        android:name="ru.vivt.applicationmvp.ui.ScannerQrFragment"
        android:label="@string/qr_code"
        tools:layout="@layout/fragment_scanner_qr" />
</navigation>